--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/css/login.css": "/css/login.css",
     "/css/home.css": "/css/home.css",
+    "/css/profileHome.css": "/css/profileHome.css",
     "/css/app.css": "/css/app.css",
     "/js/home.js": "/js/home.js",
     "/js/login.js": "/js/login.js"
