--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,7 @@
     "/css/home.css": "/css/home.css",
     "/css/profileHome.css": "/css/profileHome.css",
     "/css/app.css": "/css/app.css",
+    "/js/header.js": "/js/header.js",
     "/js/home.js": "/js/home.js",
     "/js/login.js": "/js/login.js",
     "/js/posts.js": "/js/posts.js"
