--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/css/login.css": "/css/login.css",
     "/css/home.css": "/css/home.css",
     "/css/profileHome.css": "/css/profileHome.css",
+    "/css/friends.css": "/css/friends.css",
     "/css/app.css": "/css/app.css",
     "/js/header.js": "/js/header.js",
     "/js/home.js": "/js/home.js",
