Modal friends and bug num friends

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,6 +5,7 @@
     "/css/profileHome.css": "/css/profileHome.css",
     "/css/friends.css": "/css/friends.css",
     "/css/app.css": "/css/app.css",
+    "/js/friends.js": "/js/friends.js",
     "/js/header.js": "/js/header.js",
     "/js/home.js": "/js/home.js",
     "/js/login.js": "/js/login.js",
