Front pages edit and password

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,7 @@
     "/css/home.css": "/css/home.css",
     "/css/profileHome.css": "/css/profileHome.css",
     "/css/friends.css": "/css/friends.css",
+    "/css/profileSettings.css": "/css/profileSettings.css",
     "/css/app.css": "/css/app.css",
     "/js/friends.js": "/js/friends.js",
     "/js/header.js": "/js/header.js",
