--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,6 +6,7 @@
     "/css/friends.css": "/css/friends.css",
     "/css/profileSettings.css": "/css/profileSettings.css",
     "/css/app.css": "/css/app.css",
+    "/js/editProfile.js": "/js/editProfile.js",
     "/js/friends.js": "/js/friends.js",
     "/js/header.js": "/js/header.js",
     "/js/home.js": "/js/home.js",
