Notifications main functionalities

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,6 +5,7 @@
     "/css/profileHome.css": "/css/profileHome.css",
     "/css/friends.css": "/css/friends.css",
     "/css/profileSettings.css": "/css/profileSettings.css",
+    "/css/notifications.css": "/css/notifications.css",
     "/css/app.css": "/css/app.css",
     "/js/editProfile.js": "/js/editProfile.js",
     "/js/friends.js": "/js/friends.js",
