--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -12,5 +12,6 @@
     "/js/header.js": "/js/header.js",
     "/js/home.js": "/js/home.js",
     "/js/login.js": "/js/login.js",
+    "/js/notifications.js": "/js/notifications.js",
     "/js/posts.js": "/js/posts.js"
 }
