--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -13,5 +13,6 @@
     "/js/home.js": "/js/home.js",
     "/js/login.js": "/js/login.js",
     "/js/notifications.js": "/js/notifications.js",
-    "/js/posts.js": "/js/posts.js"
+    "/js/posts.js": "/js/posts.js",
+    "/js/register.js": "/js/register.js"
 }
